--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -6,7 +6,7 @@
     --text-primary: #f7fafc !important;
     --text-secondary: #e2e8f0 !important;
     --text-muted: #a0aec0 !important;
-    --border-color: #4a5568 !important;
+    --border-color: #37383b !important;
 }
 
 /** TEMA AUTO (basado en preferencia del sistema) **/
@@ -18,7 +18,7 @@
         --text-primary: #f7fafc !important;
         --text-secondary: #e2e8f0 !important;
         --text-muted: #a0aec0 !important;
-        --border-color: #4a5568 !important;
+        --border-color: #37383b !important;
     }
 }
 
